<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AssetProfileOperations">

    <Button
        android:id="@+id/create_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_asset" />

    <Button
        android:id="@+id/bind_asset_to_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_asset" />

    <Button
        android:id="@+id/update_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_asset" />

    <Button
        android:id="@+id/get_asset_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_asset_detail" />

    <TextView
        android:id="@+id/asset_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

</LinearLayout>