<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/update_location_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_location_config" />

    <Button
        android:id="@+id/update_notification_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_notification_config" />

    <Button
        android:id="@+id/update_data_tracking_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_data_tracking_config" />

    <TextView
        android:id="@+id/configuration_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

</LinearLayout>