<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExtendedTrackingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Allow Mock Location"/>
                <Switch
                    android:id="@+id/mock_location_sb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/radioButtonActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TRACKING_MODE_ACTIVE" />

                <RadioButton
                    android:id="@+id/radioButtonBalanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TRACKING_MODE_BALANCED" />

                <RadioButton
                    android:id="@+id/radioButtonPassive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TRACKING_MODE_PASSIVE" />

                <RadioButton
                    android:id="@+id/radioButtonTimeInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TRACKING_BASED_TIME_INTERVAL" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp">

                    <EditText
                        android:id="@+id/timeInterval"
                        android:visibility="gone"
                        tools:visibility="visible"
                        tools:ignore="Autofill"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_edit_text_bg"
                        android:hint="Time in seconds"
                        android:inputType="number"
                        android:lines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/text_color_primary"
                        android:textColorHint="@color/md_grey_400"
                        android:textCursorDrawable="@drawable/shape_cursor_color"
                        android:textSize="15sp" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/radioButtonDistanceInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TRACKING_BASED_DISTANCE_INTERVAL" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal">

                    <EditText
                        android:visibility="gone"
                        android:id="@+id/distanceInterval"
                        tools:visibility="visible"
                        tools:ignore="Autofill"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_edit_text_bg"
                        android:hint="Distance in meters"
                        android:inputType="number"
                        android:lines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/text_color_primary"
                        android:textColorHint="@color/md_grey_400"
                        android:textCursorDrawable="@drawable/shape_cursor_color"
                        android:textSize="15sp" />

                </LinearLayout>

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/start_tracking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/start_tracking"
                    />

                <Button
                    android:id="@+id/stop_tracking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginLeft="10dp"
                    android:text="@string/stop_tracking"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/start_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/start_trip"
                    />

                <Button
                    android:id="@+id/stop_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginLeft="10dp"
                    android:text="@string/stop_trip"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/isStopTracking"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/locationEngineInfo"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/locationInfo"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/edit_asset_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/route_nav_bg"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/create_asset"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
